[package]
name = "learn-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.0-alpha" }
tokio={ version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors","fs"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
